--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ body {
   width: 70%;
   margin: 0 auto;
   padding: 50px;
-  height: 1000px;
+  height: 1050px;
 }
 
 .ridestarter_container {
@@ -341,6 +341,27 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: 10px 10px 5px #888888;
+}
+
+.more_projects {
+  float: none;
+  margin: 0 auto;
+  width: 300px;
+}
+
+.button_more_projects {
+  border-radius: 8px;
+  color: #232323;
+  font-size: 20px;
+  width: 290px;
+  height: 53px;
+  border: solid #1A505A 2px;
+  text-decoration: none;
+  background: none;
+  font-family: sans-serif;
+  letter-spacing: 1;
+  margin-bottom: 50px;
+  cursor: pointer;
 }
 
 
