--- a/css/simplebox.css
+++ b/css/simplebox.css
@@ -34,7 +34,7 @@ a {
 
 .hero_container {
   width: 100%;
-  padding-top: 140px;
+  padding-top: 100px;
 }
 
 .hero_container img {
@@ -67,6 +67,22 @@ a {
   margin-top: -20px;
 }
 
+.button_simplebox {
+  border-radius: 8px;
+  color: white;
+  font-size: 20px;
+  width: 150px;
+  height: 53px;
+  border: solid white 2px;
+  text-decoration: none;
+  background: none;
+  margin-top: 30px;
+  font-family: sans-serif;
+  letter-spacing: 1;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
 .arrow_down_container {
   font-size: 80px;
   text-align: center;
@@ -82,7 +98,7 @@ a {
 
 @media screen and (max-width: 640px) {
   .hero_container {
-    padding-top: 20px;
+    padding-top: 0px;
     width: 100%;
     margin: 0 auto;
   }
