--- a/css/more_projects.css
+++ b/css/more_projects.css
@@ -27,14 +27,14 @@ html, body {
 
 .hero_container {
   position: absolute;
-  top: 300px;
+  top: 280px;
   left: 0;
   right: 0;
 }
 
 .hero_container h1 {
   letter-spacing: 5;
-  font-size: 48px;
+  font-size: 62px;
   font-family: helvetica, sans-serif;
   text-align: center;
   color: white;
@@ -58,12 +58,19 @@ html, body {
   text-align: center;
 }
 
-.more_projects_container img {
+.more_projects_container{
   display: inline-block;
+  width: 60%;
+  margin-left: 20px;
+}
+
+#peertalk {
   background-size: cover;
   background-repeat: no-repeat;
   width: 44.9%;
   text-align: center;
-  margin-left: 20px;
-
+  cursor: pointer;
+  transition: 0.3s;
 }
+
+#peertalk:hover {opacity: 0.7;}
