--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,16 @@ hr {
   border-top:2px solid #1A505A;
   margin-top: -35px;
   margin-bottom: 40px;
-  width: 200px;
+  width: 150px;
+}
+
+#hr_about {
+  height: 0;
+  border: 0;
+  border-top:2px solid white;
+  margin-top: -35px;
+  margin-bottom: 40px;
+  width: 150px;
 }
 
 /* NAVIGATION BAR */
@@ -265,7 +274,7 @@ hr {
 
 .simplebox_container {
   clear: both;
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 .simplebox_text {
@@ -336,7 +345,7 @@ hr {
 
 .more_projects {
   clear: both;
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 .more_projects img {
@@ -358,7 +367,7 @@ hr {
   letter-spacing: 5;
   font-size: 42px;
   font-family: helvetica, sans-serif;
-  color: #7D9DBD;
+  color: #1A505A;
   font-weight: 600;
 }
 
@@ -395,7 +404,7 @@ hr {
   font-size: 20px;
   width: 150px;
   height: 53px;
-  border: solid #7D9DBD 2px;
+  border: solid #1A505A 2px;
   text-decoration: none;
   background: none;
   margin-top: 30px;
@@ -424,6 +433,7 @@ hr {
   .simplebox_text {
     width: 100%;
     margin-top: 0;
+    margin-bottom: 40px;
   }
   .more_projects img {
     width: 100%;
@@ -431,6 +441,7 @@ hr {
   .more_projects_text {
     width: 100%;
     margin-top: 0;
+    margin-bottom: 40px;
   }
 }
 
@@ -455,6 +466,7 @@ hr {
   .simplebox_text {
     width: 100%;
     margin-top: 0;
+    margin-bottom: 40px;
   }
   .more_projects img {
     width: 60%;
@@ -463,10 +475,10 @@ hr {
   .more_projects_text {
     width: 100%;
     margin-top: 0;
+    margin-bottom: 40px;
   }
 
 }
-
 
 /* PROJECTS */
 
@@ -537,7 +549,7 @@ hr {
 }
 .left_footer {
   float: left;
-  padding-left: 50px;
+  padding-left: 100px;
   color: white;
   font-family: sans-serif;
   font-size: 14px;
@@ -548,10 +560,12 @@ hr {
   color: white;
   letter-spacing: 3px;
   float: right;
-  margin-right: 20px;
+  margin-right: 100px;
 }
 .fa {
   color: white;
+  cursor: pointer;
+  letter-spacing: 5px;
 }
 
 @media (max-width: 480px) {
