--- a/css/more_projects.css
+++ b/css/more_projects.css
@@ -48,29 +48,33 @@ html, body {
 }
 
 .more_projects {
-
-}
-
-.more_projects_container {
-  width: 60%;
+  width: 70%;
   padding-top: 50px;
   margin: 0 auto;
   text-align: center;
 }
 
-.more_projects_container{
+.more_projects_container {
+  width: 100%;
+}
+
+.projects {
   display: inline-block;
-  width: 60%;
-  margin-left: 20px;
-}
-
-#peertalk {
-  background-size: cover;
-  background-repeat: no-repeat;
   width: 44.9%;
+  margin: 10px;
   text-align: center;
-  cursor: pointer;
-  transition: 0.3s;
 }
 
-#peertalk:hover {opacity: 0.7;}
+.projects:hover {
+  opacity: 0.7;
+}
+
+
+@media screen and (max-width: 640px) {
+  .hero_container {
+    top: 200px;
+  }
+  .projects {
+    width: 100%;
+  }
+}
