--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -115,7 +115,7 @@ p {
 /** NAVIGATION **/
 
 .navigation {
-  background-color: #EEEEEE;
+  background-color: #F4F4F4;
   width: 100%;
   box-shadow: 0px 2px 5px #888888;
 }
@@ -128,6 +128,7 @@ p {
   margin-left: 30px;
   font-weight: 400;
   cursor: pointer;
+  letter-spacing: 1;
 }
 
 @media screen and (max-width: 640px) {
@@ -339,10 +340,8 @@ p {
 .user_flow img {
   background-size: cover;
   background-repeat: no-repeat;
-  width: 50%;
-  margin-left: 25%;
+  width: 90%;
   margin-top: 20px;
-  box-shadow: 0px 2px 5px #888888;
   background-color: white;
 }
 
