--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,9 @@ hr {
 }
 
 .hero_container {
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  top: 30%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   position: absolute;
 }
 
@@ -135,13 +134,6 @@ hr {
    color: white;
 }
 
-@media screen and (max-width: 640px) {
-  .top_button_container {right: 30px;}
-  .hero_container {
-    top: 25%;
-  }
-
-}
 
 
 /* ABOUT */
